# 5PkEigenleistung

./: README.md
Actor-Critic-Chess-Agent/: CMakeLists.txt  README.md
Actor-Critic-Chess-Agent/apps/: CMakeLists.txt  main.cpp
Actor-Critic-Chess-Agent/doc/: mirror_chess_board_formula_derivation.txt
Actor-Critic-Chess-Agent/include/actor-critic-chess-agent/: environment.h
Actor-Critic-Chess-Agent/libs/chess_lib/: CMakeLists.txt
Actor-Critic-Chess-Agent/libs/chess_lib/include/chess_lib/: chess.h
Actor-Critic-Chess-Agent/libs/chess_lib/src/: chess_board.cpp  chess_game.cpp  chess_move.cpp  chess_piece.cpp
Actor-Critic-Chess-Agent/libs/ml_lib/: CMakeLists.txt
Actor-Critic-Chess-Agent/libs/ml_lib/include/ml_lib/: model.h  replay_memory.h  tensor.h
Actor-Critic-Chess-Agent/libs/ml_lib/src/: model_layer_initializer.cpp  model_layer_type.cpp  model_lossfunction.cpp  model_optimizer.cpp  tensor.cpp  tensor_element.cpp  tensor_element_autodiff_node.cpp
Actor-Critic-Chess-Agent/src/: chess_agent_environment.cpp  chess_agent_replay.cpp  chess_agent_test.cpp  chess_agent_train.cpp
AlphaZeroKlon/: chess_main.py  coach.py  mcts.py
